; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sec/extr_sec.c_sec_controller_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sec/extr_sec.c_sec_controller_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sec_softc = type { i32 }

@SEC_TIMEOUT = common dso_local global i32 0, align 4
@SEC_MCR = common dso_local global i32 0, align 4
@SEC_MCR_SWR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"timeout while waiting for device reset!\0A\00", align 1
@ETIMEDOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sec_softc*)* @sec_controller_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sec_controller_reset(%struct.sec_softc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sec_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.sec_softc* %0, %struct.sec_softc** %3, align 8
  %5 = load i32, i32* @SEC_TIMEOUT, align 4
  store i32 %5, i32* %4, align 4
  %6 = load %struct.sec_softc*, %struct.sec_softc** %3, align 8
  %7 = load i32, i32* @SEC_MCR, align 4
  %8 = load i32, i32* @SEC_MCR_SWR, align 4
  %9 = call i32 @SEC_WRITE(%struct.sec_softc* %6, i32 %7, i32 %8)
  br label %10

10:                                               ; preds = %29, %1
  %11 = load %struct.sec_softc*, %struct.sec_softc** %3, align 8
  %12 = load i32, i32* @SEC_MCR, align 4
  %13 = call i32 @SEC_READ(%struct.sec_softc* %11, i32 %12)
  %14 = load i32, i32* @SEC_MCR_SWR, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %30

17:                                               ; preds = %10
  %18 = call i32 @DELAY(i32 1000)
  %19 = load i32, i32* %4, align 4
  %20 = sub nsw i32 %19, 1000
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %17
  %24 = load %struct.sec_softc*, %struct.sec_softc** %3, align 8
  %25 = getelementptr inbounds %struct.sec_softc, %struct.sec_softc* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @device_printf(i32 %26, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %28 = load i32, i32* @ETIMEDOUT, align 4
  store i32 %28, i32* %2, align 4
  br label %31

29:                                               ; preds = %17
  br label %10

30:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %31

31:                                               ; preds = %30, %23
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @SEC_WRITE(%struct.sec_softc*, i32, i32) #1

declare dso_local i32 @SEC_READ(%struct.sec_softc*, i32) #1

declare dso_local i32 @DELAY(i32) #1

declare dso_local i32 @device_printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
